# CLINIX

./: .gitignore  README.md  Sistema.txt  gen_cie10_sql.py  run-dev.ps1  setup.ps1
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/core/: audit.py  cache.py  config.py  database.py  dependencies.py  email_sender.py  events.py  exceptions.py  factories.py  scheduler.py  security.py  seed.py
backend/app/modules/admisiones/: router.py  schemas.py  service.py
backend/app/modules/auditoria/: router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/cie10/: router.py  schemas.py  service.py
backend/app/modules/citas/: router.py  schemas.py  service.py
backend/app/modules/dashboard/: router.py  schemas.py  service.py
backend/database/: init.sql  migration_001_cie10.sql  migration_002_landing.sql  seed_data.sql
backend/domain/: repositories.py
backend/domain/entities/: admision.py  cita.py  habitacion.py  paciente.py  reserva.py
backend/domain/value_objects/: dni.py  estado_cita.py  rango_horario.py
backend/infrastructure/: uow.py
backend/infrastructure/mappers/: admision_mapper.py  cita_mapper.py  habitacion_mapper.py  paciente_mapper.py  reserva_mapper.py
backend/infrastructure/repositories/: admision_repo.py  cita_repo.py  habitacion_repo.py  paciente_repo.py  reserva_repo.py
backend/tests/: conftest.py
backend/tests/integration/: test_admision_flow.py  test_auth_flow.py  test_dashboard_flow.py  test_reserva_flow.py
(+119 files in other folders)
